karl package Changelog
======================

3.113 (2013-08-23)
------------------

- Extend fix for duplicate mail delivery bug in BCC handling:  check
  duplication only on address-part, because BCC doesn't have name-part.

3.112 (2013-08-21)
------------------

- Increte font size on calendar list view (LP #1207092).

- Fix duplicate mail delivery bug in BCC handling.

3.111 (2013-08-14)
------------------

- Include BCC'ed targets when processing mail-in (e.g., from Exchange
  "distribution groups" (LP #1206974).

- Avoid mutating feed data in ``karl.views.contentfeeds:feed_dump_csv``.

- Added user sync script for synchronizing user data with an external JSON data
  source.

3.110 (2013-08-02)
------------------

- Calendar notes (portlet, new view) (LP #1193129)

- More padding on event location in calendar list view (LP #1207089)

3.109 (2013-07-26)
------------------

- Multi-day events not displayed in Calendar print view (LP #1201926)

- Calendar list view should show all events, no more pagination.
  (LP #1202782)

3.108 (2013-05-06)
------------------

- When emitting alerts or processing digests, deal with 'daily' / 'weekly' /
  'biweekly' frequencies.

- Added 'weekly' and 'biweekly' digest options for community subscriptions.

- Convert profiles' '_pending_alerts' to conflict-resistant
  'appendonly.Accumulator'. (LP #1122349)

3.107 (2013-04-02)
------------------

- Allowed modifying available report columns for peopledirectory reports
  via registering a utility for a new ``karl.views.interfaces.IReportColumns``
  interface.

- Added option for named portlets in intranet middle / right columns.
  To use a named portlet, append '|' plus the adapter name to an item's path.
  (LP #1150171)

- Fixed 'kaltura' tinymce plugin: (LP #1105224).
  
- Fixed 'imagedrawer' tinymce plugin: "TypeError: this.bind is not a function"
  happened and dialog did not open, in case there were no images previously